--- a/EmployeesApp/ClientApp/src/app/app.component.css
+++ b/EmployeesApp/ClientApp/src/app/app.component.css
@@ -1,6 +1,17 @@
+.pages-content {
+  background-color: #fafafa;
+  overflow: auto;
+  width: 100%;
+  height: 100vh
+}
+
+
+
 @media (max-width: 767px) {
-  /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+ 
   .body-content {
     padding-top: 50px;
   }
 }
+
+
